fixed page being too short

--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,8 @@
   flex: 1;
   flex-direction: column;
 
+  min-height: 80vh;
+
 }
 
 footer {
